# multi-robot-viro

./: .gitignore  README.md
test-results/figure4/persent_0/: viro_result_MH_04_difficult_202502100127.csv  viro_result_MH_04_difficult_202502100128.csv  viro_result_MH_04_difficult_202502100130.csv  viro_result_MH_04_difficult_202502100133.csv  viro_result_MH_04_difficult_202502100134.csv  viro_result_MH_04_difficult_202502100135.csv
test-results/figure4/persent_100/: viro_result_MH_04_difficult_202502091939.csv  viro_result_MH_04_difficult_202502091942.csv
test-results/figure4/persent_20/: viro_result_MH_04_difficult_202502092340.csv  viro_result_MH_04_difficult_202502092341.csv  viro_result_MH_04_difficult_202502092348.csv  viro_result_MH_04_difficult_202502092355.csv
test-results/figure4/persent_40/: viro_result_MH_04_difficult_202502092316.csv  viro_result_MH_04_difficult_202502092322.csv  viro_result_MH_04_difficult_202502092328.csv  viro_result_MH_04_difficult_202502092332.csv  viro_result_MH_04_difficult_202502092333.csv
test-results/figure4/persent_60/: viro_result_MH_04_difficult_202502092250.csv  viro_result_MH_04_difficult_202502092258.csv  viro_result_MH_04_difficult_202502092300.csv  viro_result_MH_04_difficult_202502092308.csv  viro_result_MH_04_difficult_202502092313.csv
test-results/figure4/persent_70/: viro_result_MH_04_difficult_202502100105.csv  viro_result_MH_04_difficult_202502100109.csv  viro_result_MH_04_difficult_202502100111.csv  viro_result_MH_04_difficult_202502100112.csv  viro_result_MH_04_difficult_202502100118.csv  viro_result_MH_04_difficult_202502100122.csv
test-results/figure4/persent_80/: viro_result_MH_04_difficult_202502100008.csv  viro_result_MH_04_difficult_202502100015.csv  viro_result_MH_04_difficult_202502100021.csv  viro_result_MH_04_difficult_202502101851.csv
test-results/figure4/persent_90/: viro_result_MH_04_difficult_202502100041.csv  viro_result_MH_04_difficult_202502100042.csv  viro_result_MH_04_difficult_202502100053.csv  viro_result_MH_04_difficult_202502101826.csv  viro_result_MH_04_difficult_202502101831.csv  viro_result_MH_04_difficult_202502101832.csv
test-results/table2/MH_01/RF-VIRO/: viro_result_MH_01_easy_202411121116.csv
test-results/table2/MH_01/VIR_SLAM/: viro_result_MH_01_easy_202502041318.csv
test-results/table2/MH_01/groundTruth/: mh01_GT_odometry_tum.txt
test-results/table2/MH_01/w_o_EPDOP/: viro_result_MH_01_easy_202502081902.csv
test-results/table2/MH_01/w_o_HVCE/: viro_result_MH_01_easy_202502081807.csv
test-results/table2/MH_02/groundTruth/: mh02_GT_odometry_tum.txt
test-results/table2/MH_03/RF-VIRO/: viro_result_MH_03_medium_202411121107.csv
test-results/table2/MH_03/VINS-Mono/: mh03_odometry_tum.csv
test-results/table2/MH_03/groundTruth/: mh03_GT_odometry_tum.txt
test-results/table2/MH_03/w_o_HVCE/: viro_result_MH_03_medium_202502021726.csv
test-results/table2/MH_04/RF-VIRO/: viro_result_MH_04_difficult_202502040144.csv
test-results/table2/MH_04/VINS-Mono/: mh04_odometry_tum.csv
text-results/figure4/persent_0/: viro_result_MH_04_difficult_202502100126.csv  viro_result_MH_04_difficult_202502100129.csv  viro_result_MH_04_difficult_202502100131.csv  viro_result_MH_04_difficult_202502100132.csv
text-results/figure4/persent_100/: viro_result_MH_04_difficult_202502091933.csv  viro_result_MH_04_difficult_202502091935.csv  viro_result_MH_04_difficult_202502091936.csv  viro_result_MH_04_difficult_202502091947.csv  viro_result_MH_04_difficult_202502091951.csv  viro_result_MH_04_difficult_202502091952.csv  viro_result_MH_04_difficult_202502091955.csv  viro_result_MH_04_difficult_202502092001.csv
text-results/figure4/persent_20/: viro_result_MH_04_difficult_202502092342.csv  viro_result_MH_04_difficult_202502092344.csv  viro_result_MH_04_difficult_202502092346.csv  viro_result_MH_04_difficult_202502092353.csv  viro_result_MH_04_difficult_202502092354.csv  viro_result_MH_04_difficult_202502092357.csv
text-results/figure4/persent_40/: viro_result_MH_04_difficult_202502092327.csv  viro_result_MH_04_difficult_202502092330.csv  viro_result_MH_04_difficult_202502092331.csv  viro_result_MH_04_difficult_202502092334.csv  viro_result_MH_04_difficult_202502092335.csv
text-results/figure4/persent_60/: viro_result_MH_04_difficult_202502092252.csv  viro_result_MH_04_difficult_202502092303.csv  viro_result_MH_04_difficult_202502092305.csv  viro_result_MH_04_difficult_202502092307.csv  viro_result_MH_04_difficult_202502092310.csv
text-results/figure4/persent_70/: viro_result_MH_04_difficult_202502100104.csv  viro_result_MH_04_difficult_202502100113.csv  viro_result_MH_04_difficult_202502100120.csv  viro_result_MH_04_difficult_202502100121.csv
text-results/figure4/persent_80/: viro_result_MH_04_difficult_202502100012.csv  viro_result_MH_04_difficult_202502100014.csv  viro_result_MH_04_difficult_202502100018.csv  viro_result_MH_04_difficult_202502101850.csv  viro_result_MH_04_difficult_202502101853.csv  viro_result_MH_04_difficult_202502101854.csv
text-results/figure4/persent_90/: viro_result_MH_04_difficult_202502100043.csv  viro_result_MH_04_difficult_202502101827.csv  viro_result_MH_04_difficult_202502101829.csv  viro_result_MH_04_difficult_202502101830.csv
viro_epdop_hvce/: CMakeLists.txt  README.md  package.xml
viro_epdop_hvce/config/: viro_params.yaml
viro_epdop_hvce/docs/: EPDOP.md  HVCE.md  README.md
viro_epdop_hvce/include/viro_epdop_hvce/: viro_core.h
viro_epdop_hvce/launch/: multi_robot.launch  viro_epdop_hvce.launch
viro_epdop_hvce/scripts/: placeholder.py
viro_epdop_hvce/src/: viro_core.cpp  viro_node.cpp
(+99 files in other folders)
